# lmustatsviewer

./: .gitignore  CHANGELOG.md  CHANGELOG.txt  CLAUDE.md  HANDOFF.md  LICENSE  README.md  index.html  package-lock.json  package.json  setup.iss  version.json  version_dev.json  vite.config.ts
.github/workflows/: release.yml
htdocs/: car_configs.php  changelog.php  config.php  fetch_laps.php  fetch_version.php  index.php  launch_installer.php  live.php  race_details.php  records.php  start_download.php  update.php
htdocs/css/: style.css
htdocs/includes/: cars.json  circuits.json  config.default.json  db.php  fetch_live_data.php  footer.php  functions.php  indexer.php  init.php  queries.php
htdocs/js/: update-checker.js
htdocs/lang/: lang_de.php  lang_en.php  lang_es.php  lang_fr.php
htdocs/live/: cars.json  live_header.php  live_js_3d.js  live_js_core.js  live_js_gauges.js  live_js_map.js  live_js_stint.js  live_styles.css  live_tab_3d.php  live_tab_live.php  live_tab_map.php  live_tab_standings.php
htdocs/tests/: run_tests.php
launcher/: build.bat  launcher.py  telemetrie_dumper.py
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs  system.rs
src/lib/: mockData.ts  tauri.ts  utils.ts
src/routes/: Config.tsx  Dashboard.tsx  Live.tsx  Records.tsx  SessionDetail.tsx  Sessions.tsx  SetupCompare.tsx  SetupDetail.tsx  Setups.tsx
src/stores/: theme.ts  version.ts
(+11 files in other folders)
