[package]
name = "lmustatsviewer"
version = "2.0.0"
description = "Le Mans Ultimate Stats Viewer — v2"
authors = ["cparfait"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "lmustatsviewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# Plugins ajoutés au fil des phases (commentés tant que pas utilisés) :
# tauri-plugin-sql      = { version = "2", features = ["sqlite"] }   # Phase 1
# tauri-plugin-fs       = "2"                                         # Phase 1
# tauri-plugin-dialog   = "2"                                         # Phase 1
# tauri-plugin-http     = "2"                                         # Phase 3
# tauri-plugin-shell    = "2"                                         # Phase 3
# tauri-plugin-updater  = "2"                                         # Phase 6
# tauri-plugin-process  = "2"                                         # Phase 6

[profile.release]
panic = "abort"      # Strip expensive panic clean-up logic
codegen-units = 1    # Compile crates one after another so the compiler can optimize better
lto = true           # Enables link to optimizations
opt-level = "s"      # Optimize for binary size
strip = true         # Remove debug symbols
